service/garage/k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gau-garage-service
  namespace: bao-staging-env
  labels:
    app: bao-platform
    env: staging
spec:
  type: ClusterIP
  selector:
    app: gau-garage-service
  ports:
    - name: s3-api
      port: 3900
      targetPort: 3900
      protocol: TCP
    - name: rpc
      port: 3901
      targetPort: 3901
      protocol: TCP
    - name: web
      port: 3902
      targetPort: 3902
      protocol: TCP
    - name: admin
      port: 3903
      targetPort: 3903
      protocol: TCP
