service/garage/k8s/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gau-garage-ingress
  namespace: bao-staging-env
  labels:
    app: bao-platform
    env: staging
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.headers.customrequestheaders.X-Forwarded-Proto: https
spec:
  rules:
    - host: "s3.gauas.online"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gau-garage-service
                port:
                  number: 3900

    - host: "web.gauas.online"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gau-garage-service
                port:
                  number: 3902
